--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -1,3 +1,8 @@
 {
-  "test": "นี่คือการทดสอบ" 
+  "navbar": {
+    "co-working-space": "พื้นที่ทำงาน",
+    "reservation": "การจอง",
+    "sign-in": "เข้าสู่ระบบ",
+    "sign-out": "ออกจากระบบ"
+  }
 }
