[add] signin page

--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -4,5 +4,15 @@
     "reservation": "Reservation",
     "sign-in": "Sign In",
     "sign-out": "Sign Out"
+  },
+  "sign-in":{
+    "sign-in": "Sign In",
+    "to-make-reservations":"To make reservations",
+    "email": "Email",
+    "password": "Password",
+    "don't-have-account": "Don’t have an account?",
+    "sign-up": "Sign Up"
+
   }
+
 }
