[add] signin & signup page

--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -12,7 +12,17 @@
     "password": "Password",
     "don't-have-account": "Don’t have an account?",
     "sign-up": "Sign Up"
-
+  },
+  "sign-up":{
+    "sign-in": "Sign In",
+    "create-your-account":"Create your account",
+    "name": "Name",
+    "email": "Email",
+    "tel" : "Tel",
+    "password": "Password",
+    "confirm-password": "Confirm Password",
+    "have-account": "Already have an account?",
+    "sign-up": "Sign Up"
   }
 
 }
