[add] separate signup page

--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -22,6 +22,8 @@
     "password": "รหัสผ่าน",
     "confirm-password":"ยืนยันรหัสผ่าน",
     "have-account": "มีบัญชีผู้ใช้แล้ว",
-    "sign-up": "ลงทะเบียน"
+    "sign-up": "ลงทะเบียน",
+    "back": "ย้อนกลับ",
+    "next": "ถัดไป"
   }
 }
