--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -22,7 +22,9 @@
     "password": "Password",
     "confirm-password": "Confirm Password",
     "have-account": "Already have an account?",
-    "sign-up": "Sign Up"
+    "sign-up": "Sign Up",
+    "back": "Back",
+    "next": "Next"
   }
 
 }
