--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -4,5 +4,21 @@
     "reservation": "การจอง",
     "sign-in": "เข้าสู่ระบบ",
     "sign-out": "ออกจากระบบ"
+  },
+  "homepage": {
+    "banner": {
+      "title": "Co-working Space",
+      "description": "พื้นที่ทำงานสำหรับทุกคน"
+    },
+    "menu-card": {
+      "explore": {
+        "title": "สำรวจ",
+        "description": "สำรวจพื้นที่ทำงานร่วมและค้นหาสถานที่ทำงานที่เหมาะกับคุณ"
+      },
+      "reserve": {
+        "title": "จองเลย",
+        "description": "จองพื้นที่ทำงานที่คุณต้องการ"
+      }
+    }
   }
 }
