--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -41,5 +41,21 @@
         "description": "จองพื้นที่ทำงานที่คุณต้องการ"
       }
     }
+  },
+  "reservations": {
+    "manage": {
+      "title": "จัดการการจอง",
+      "error_fetch": "ไม่สามารถดึงข้อมูลการจองได้",
+      "table": {
+        "co-working-space-name": "ชื่อพื้นที่ทำงาน",
+        "no-of-rooms": "จำนวนห้อง",
+        "user-name": "ชื่อผู้จอง",
+        "reserved-date": "วันที่จอง",
+        "reserved-at": "จองเมื่อ"
+      }
+    },
+    "form": {
+
+    }
   }
 }
