--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -57,7 +57,14 @@
       }
     },
     "form": {
-
+      "create-title": "สร้างการจอง",
+      "create-description": "กรอกข้อมูลการจอง",
+      "edit-title": "แก้ไขการจอง",
+      "edit-description": "แก้ไขข้อมูลการจอง",
+      "co-working-space-label": "พื้นที่ทำงาน",
+      "no-of-rooms-label": "จำนวนห้อง",
+      "reserved-date-label": "วันที่จอง",
+      "submit": "ยืนยัน"
     }
   }
 }
