--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -70,5 +70,10 @@
       "delete": "Delete",
       "error-deleting-reservation": "Unable to delete reservation"
     }
-  }
-}
+  },
+  "spaces": {
+    "explore": {
+      "Explore-Co-Working-Spaces": "Explore Co-Working Spaces",
+      "Create Co-working Space": "Create Co-Working Space"
+    }
+}}
