[add] delete & edit button for admin

--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -90,7 +90,10 @@
       "Create": "Create"
     },
     "get":{
-      "make-reservation":"Make Reservation"
+      "make-reservation":"Make Reservation",
+      "edit":"Edit",
+      "delete":"Delete"
+
     }
   }
 }
