--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -92,7 +92,9 @@
     "get":{
       "make-reservation":"Make Reservation",
       "edit":"Edit",
-      "delete":"Delete"
+      "delete":"Delete",
+      "cancel":"Cancel",
+      "confirm-delete-title":"Are you sure you want to delete this co-working space?"
 
     }
   }
