[add] edit co-working space information

--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -87,7 +87,8 @@
       "Tel": "เบอร์โทรศัพท์",
       "OpenTime": "เวลาเปิด",
       "CloseTime": "เวลาปิด",
-      "Create":"สร้างการจอง"
+      "Create":"สร้างการจอง",
+      "Update": "อัพเดต"
     },
     "get":{
       "make-reservation":"สร้างการจอง",
