--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -95,7 +95,7 @@
       "edit":"แก้ไข",
       "delete":"ลบ",
       "cancel":"ยกเลิก",
-      "confirm-delete-title":"คุณแน่ใจใช่ไหมว่าต้องการลบพท้นที่ทำงานนี้"
+      "confirm-delete-title":"คุณแน่ใจใช่ไหมว่าต้องการลบพื้นที่ทำงานนี้"
 
     }
   }
