--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -62,8 +62,13 @@
       "edit-title": "Edit Reservation",
       "edit-description": "Edit the details of your reservation",
       "co-working-space-label": "Co-working Space",
+      "co-working-space-required-error": "Co-working space is required",
       "no-of-rooms-label": "No. of Rooms",
+      "no-of-rooms-required-error": "No. of rooms is required",
+      "no-of-rooms-range-error": "No. of rooms must be between 1 and 3",
       "reserved-date-label": "Reservation Date",
+      "reserved-date-required-error": "Reservation date is required",
+      "reserved-date-range-error": "Reservation date must be later day",
       "submit": "Confirm",
       "error-creating-reservation": "Unable to create reservation",
       "error-updating-reservation": "Unable to update reservation",
