--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -62,8 +62,13 @@
       "edit-title": "แก้ไขการจอง",
       "edit-description": "แก้ไขข้อมูลการจอง",
       "co-working-space-label": "พื้นที่ทำงาน",
+      "co-working-space-required-error": "กรุณาเลือกพื้นที่ทำงาน",
       "no-of-rooms-label": "จำนวนห้อง",
+      "no-of-rooms-required-error": "กรุณากรอกจำนวนห้อง",
+      "no-of-rooms-range-error": "จำนวนห้องต้องอยู่ระหว่าง 1 ถึง 3",
       "reserved-date-label": "วันที่จอง",
+      "reserved-date-required-error": "กรุณาเลือกวันที่จอง",
+      "reserved-date-range-error": "วันที่จองต้องอยู่ในอนาคต",
       "submit": "ยืนยัน",
       "error-creating-reservation": "เกิดข้อผิดพลาดในการสร้างการจอง",
       "error-updating-reservation": "เกิดข้อผิดพลาดในการแก้ไขการจอง",
