[FIX] Create/Update Reservation Btn

--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -69,7 +69,8 @@
       "reserved-date-label": "Reservation Date",
       "reserved-date-required-error": "Reservation date is required",
       "reserved-date-range-error": "Reservation date must be later day",
-      "submit": "Confirm",
+      "create": "Create",
+      "update": "Update",
       "error-creating-reservation": "Unable to create reservation",
       "error-updating-reservation": "Unable to update reservation",
       "delete": "Delete",
