--- a/frontend/locale/th/index.json
+++ b/frontend/locale/th/index.json
@@ -69,7 +69,8 @@
       "reserved-date-label": "วันที่จอง",
       "reserved-date-required-error": "กรุณาเลือกวันที่จอง",
       "reserved-date-range-error": "วันที่จองต้องอยู่ในอนาคต",
-      "submit": "ยืนยัน",
+      "create": "สร้างการจอง",
+      "update": "บันทึกการแก้ไข",
       "error-creating-reservation": "เกิดข้อผิดพลาดในการสร้างการจอง",
       "error-updating-reservation": "เกิดข้อผิดพลาดในการแก้ไขการจอง",
       "delete": "ลบ",
