[add] title of edit space page

--- a/frontend/locale/en/index.json
+++ b/frontend/locale/en/index.json
@@ -102,6 +102,10 @@
       "cancel":"Cancel",
       "confirm-delete-title":"Are you sure you want to delete this co-working space?"
 
+    },
+    "edit":{
+      "Edit-Co-Working-Space":"Edit Co-Working Space"
     }
+  
   }
 }
